# meta-forge

./: .gitignore  .pre-commit-config.yaml  2025-08-08-hive-mind-collective-intelligence-system.txt  ASSEMBLY_OPTIMIZATION_ANALYSIS.md  CLAUDE.md  CLEANUP_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  Makefile  OPTIMIZATION_REPORT.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  TDD_OPTIMIZATION_RESULTS.md  TDD_SUCCESS_SUMMARY.md  TESTING_FIXES_ANALYSIS.md  assembly_novel.md  assembly_profile.json  check_compilation.sh  config_no_validation.toml  debug_ahash.rs  debug_bitpacked  debug_bitpacked.rs  debug_kmer  debug_kmer.rs  debug_kmer2  debug_kmer2.rs  diagnostic_script.sh  imessage_recover.sh  large_reads.fastq  qc_test.fastq  quick_check.sh  reads.fastq  run_analysis.sh  run_diagnostics.sh  sample.fastq  simple_check.sh  test_config_db.db-shm  test_new_db.db-shm  (+1 more)
.cargo/: config.toml
.claude/agents/: rust-bio-optimizer.md  testing-validation.md
.prompts/: fix_tests.md  implement_module.md  refactor_surgical.md
.zsh/: claude-rust.zsh
benches/: assembly_benchmarks.rs  assembly_validation.rs  performance_profiler.rs
config/: default.toml
data/: metagenomics.db-shm  test_sample.fastq
docs/: CLASSIFICATION_OUTPUT_IMPLEMENTATION.md  CLAUDE.md  COMMAND_LINE_USAGE.md  FEATURE_EXTRACTION_IMPROVEMENTS.md  OPTIMIZATION_USAGE_GUIDE.md  PERFORMANCE_OPTIMIZATIONS_APPLIED.md  PIPELINE_GAPS_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v0.4.0.md  TAXONOMY_INTEGRATION_PHASE1.md  TAXONOMY_PHASE1_SUMMARY.md  additional_test_coverage_recommendations.md  agent_orchestration_strategy.md  algorithmic_validation_report.md  api_directory_structure.md  assembly_architecture_analysis_summary.md  assembly_architecture_optimization.md  assembly_biological_accuracy_analysis.md  assembly_biological_validation_standards.md  assembly_code_cleanup.md  assembly_code_quality_analysis.md  assembly_contig_overgeneration_fix.md  assembly_optimization_analysis.md  assembly_optimization_implementation_plan.md  assembly_parameters_reference.md  assembly_path_extension_fix.md  assembly_performance_analysis_report.md  assembly_recommendations_summary.md  bioinformatics_test_fixes.md  bioinformatics_test_validation_report.md  biological_accuracy_fixes_implemented.md  compilation_fixes_summary.md  comprehensive_tdd_testing_strategy.md  intermediate_output_formats.md  kmer_cache_integration.md  kmer_counting_optimizations.md  metagenomic_assembly_algorithm_analysis.md  metagenomic_assembly_research.md  metaspades_assembly_fixes.md  (+12 more)
examples/: intermediate_output_demo.rs  kraken_demo.rs  optimization_patterns.rs  optimized_assembly.rs  profile_assembly.rs  test_kmer_ambiguous.rs  test_taxonomy.rs
output/: SRR390728_1_report.html  SRR390728_1_report.json  SRR390728_1_summary.tsv  Sample_001_report.html  Sample_001_report.json  Sample_001_summary.tsv  sample_report.html  sample_report.json  sample_summary.tsv  short_SRR390728_1.kraken  short_SRR390728_1_enhanced_kraken.json  short_SRR390728_1_kraken_report.txt
output/demo/: demo_sample.kraken  demo_sample_enhanced.json  demo_sample_kraken_report.txt
scripts/: batch_check.sh  cc.sh  cc_diff.sh  cc_fix.sh  diagnostic_script.sh  direct_cargo_check.sh  download_taxonomy.sh  rs_preflight.sh
src/: adaptive_k_assembly.rs  assembly_graph_construction.rs  biobio.py  complete_pipeline_integration.rs  comprehensive_test_suite.rs  configuration_management.rs  core_data_structures.rs  database_integration.rs  feature_extraction.rs  genomic_validator.rs  gnn_repeat_resolution.rs  integrated_pipeline.rs  learned_bloom_filter.rs  lib.rs  main.rs  performance_profiler.rs  streaming_abundance_estimator.rs
src/assembly/: CLAUDE.md  README.md  adaptive_k.rs  advanced_graph_algorithms.rs  bioinformatics_optimizations.rs  comprehensive_benchmark.rs  coordinator.rs  corrected_graph_construction.rs  corrected_taxonomic_classifier.rs  cpu_monitor.rs  database_connection_tests.rs  database_optimizations.rs  fast_kmer_extraction.rs  fast_transitive_reduction.rs  graph_construction.rs  laptop_assembly.rs  memory_benchmark.rs  memory_mapped.rs  memory_optimizations.rs  mod.rs  optimization_summary.md  optimization_tests.rs  optimized_kmer_pool.rs  optimized_structures.rs  orchestrator.rs  parallel_optimizations.rs  performance_optimizations.rs  simd_kmer.rs  simd_optimizations.rs
src/cli/: fast_mode.rs
src/core/: CLAUDE.md  data_structures.rs  mod.rs  paired_reads.rs  pipeline_types.rs
src/database/: CLAUDE.md  integration.rs
src/features/: CLAUDE.md  extraction.rs  mod.rs
src/ml/: CLAUDE.md  abundance_estimator.rs  classification_reporter.rs  gnn_repeat_resolution.rs  kmer_taxonomy.rs  learned_bloom_filter.rs  mod.rs  semibin_logger.rs  simple_classifier.rs  visualization_export.rs
src/pipeline/: CLAUDE.md  mod.rs  (+3 more)
tests/: assembly_accuracy_test_suite.rs  assembly_check_types.rs  assembly_chunk_debug.rs  assembly_chunking_debug.rs  assembly_contig_count_validation.rs  assembly_correctness_validation_tests.rs  assembly_coverage_filtering_debug.rs  assembly_critical_fixes_tdd.rs  assembly_debug_simple.rs  assembly_debug_tests.rs  assembly_performance_test.rs  assembly_regression_test_framework.rs  assembly_zero_contig_tdd_tests.rs  automated_validation_pipeline.rs  basic_optimization_test.rs  comprehensive_test_suite.rs  intermediate_output_test.rs  laptop_assembly_tests.rs  laptop_assembly_validation_tests.rs  laptop_memory_monitoring_tests.rs  laptop_performance_benchmark_suite.rs  laptop_performance_regression_tests.rs  mod.rs  optimized_assembly_integration_test.rs  tdd_assembly_robustness_tests.rs  tdd_phase1_core_data_structures.rs  tdd_phase1_graph_construction.rs  test_ambiguous_bases.rs  test_assembly_connectivity_fix.rs  test_assembly_graph.rs  test_assembly_pipeline.rs  test_core_data_structures.rs  test_edge_cases_bioinformatics.rs  test_graph_algorithms.rs  test_integration_end_to_end.rs  test_property_based_genomics.rs  test_statistical_accuracy.rs  test_synthetic_biological_data.rs  test_tdd_core_paired_reads.rs
(+63 files in other folders)
