[package]
name = "meta-forge"
version = "0.4.0"
edition = "2021"
authors = ["Mladen Rasic <mrasic2@uic.edu>"]
description = "Metagenomic data analysis and LLM integration toolkit"
license = "MIT"
repository = "https://github.com/mladen5000/meta-forge"
readme = "README.md"
default-run = "demo-progress"

[[bin]]
name = "demo-progress"
path = "src/bin/demo_progress.rs"

[[bin]]
name = "meta-forge"
path = "src/main.rs"

[[bin]]
name = "test-paired-reads"
path = "src/bin/test_paired_reads.rs"

[[bin]]
name = "integrated-demo"
path = "src/bin/integrated_demo.rs"

[[bin]]
name = "meta-tui"
path = "src/bin/tui.rs"

[lib]
name = "meta_forge"
path = "src/lib.rs"

[dependencies]
# --- Core Data Structures & Concurrency ---
ahash = { version = "0.8.12", features = ["serde"] }
dashmap = "6.1.0"
fxhash = "0.2.1"
parking_lot = "0.12.4"

# --- Configuration, CLI, and Utilities ---
config = "0.5.13"
toml = "0.2.3"
dirs = "6.0.0"
num_cpus = "1.17.0"
tempfile = "3.20.0"

# --- Performance, Compression, Parallelism ---
criterion = { version = "0.7.0", optional = true }
lz4_flex = "0.11.5"
rayon = "1.10.0"
tokio = { version = "1.47.1", features = ["full"] }
crossbeam-channel = "0.5.15"
memmap2 = "0.9.7"
mimalloc = "0.1.47"

# --- ML/AI & Scientific Computing ---
candle-core = "0.9.1"
candle-nn = "0.9.1"
ndarray = { version = "0.16.1", features = ["serde"] }
ort = "1.16.3"
petgraph = "0.8.2"
smartcore = "0.4.2"
fastrand = "2.3.0"
pathfinding = "4.14.0"

tracing = "0.1.41"
clap = { version = "4.5.44", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"


# --- Terminal User Interface ---
tui-input = "0.14.0"
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tui-textarea = "0.7.0"

# --- Bioinformatics ---
bio = "2.3.0"

seq_io = "0.3.4"
rust-htslib = "0.50.0"

# --- Database & Serialization ---
rusqlite = { version = "0.37.0", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
proptest = "1.7.0"
bincode = "2.0.1"
chrono = { version = "0.4.41", features = ["serde"] }

# --- Probabilistic Data Structures ---
probabilistic-collections = "0.7.0"
hyperloglog = "1.0.2"
# sketchy = "0.3.0"  # Package not available, removing for now

[features]
# Optional/benchmarking features
bench = ["criterion"]

[dev-dependencies]
criterion = "0.7.0"
anyhow = "1.0.99"
thiserror = "2.0.14"
