[package]
name = "meta-forge"
version = "0.4.0"
edition = "2021"
authors = ["Mladen Rasic <mrasic2@uic.edu>"]
description = "Metagenomic data analysis and LLM integration toolkit"
license = "MIT"
repository = "https://github.com/mladen5000/meta-forge"
readme = "README.md"

[[bin]]
name = "meta-forge"
path = "src/main.rs"


[lib]
name = "meta_forge"
path = "src/lib.rs"

[dependencies]
# --- Core Data Structures & Concurrency ---
ahash = { version = "0.8.12", features = ["serde"] }
dashmap = "6.1.0"
fxhash = "0.2.1"
parking_lot = "0.12.4"

# --- Configuration, CLI, and Utilities ---
config = "0.15"
toml = "0.9"  # Used for TOML serialization in config templates
dirs = "6.0.0"
num_cpus = "1.17.0"
tempfile = "3.20.0"

# --- Performance, Compression, Parallelism ---
# criterion = { version = "0.7.0", optional = true }  # Moved to dev-dependencies
lz4_flex = "0.11.5"
rayon = "1.10.0"
tokio = { version = "1.47.1", features = ["full"] }
crossbeam-channel = "0.5.15"
memmap2 = "0.9.7"
mimalloc = "0.1.47"

# --- ML/AI & Scientific Computing ---
# REMOVED: Unused ML libraries (not referenced in src/)
# candle-core = "0.9.1"
# candle-nn = "0.9.1"
# ort = "1.16.3"
# smartcore = "0.4.2"
ndarray = { version = "0.16.1", features = ["serde"] }
petgraph = { version = "0.8.2", features = ["serde"] }
fastrand = "2.3.0"
pathfinding = "4.14.0"
bit-vec = "0.8.0"

tracing = "0.1.41"
clap = { version = "4.5.44", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0.99"
thiserror = "2.0.14"


# --- Terminal User Interface ---
tui-input = "0.14.0"
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tui-textarea = "0.7.0"
indicatif = "0.17"
colored = "2.1"

# --- Bioinformatics ---
bio = "2.3.0"

seq_io = "0.3.4"
rust-htslib = "0.50.0"
needletail = "0.5.1"  # Fast k-mer extraction and sequence parsing
noodles = { version = "0.82.0", features = ["fastq"] }  # High-performance sequence formats

# --- Database & Serialization ---
rusqlite = { version = "0.37.0", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
# proptest = "1.7.0"  # Moved to dev-dependencies
bincode = "2.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
md5 = "0.7.0"
sha2 = "0.10.0"
flate2 = "1.0.0"

# --- Probabilistic Data Structures ---
probabilistic-collections = "0.7.0"
hyperloglog = "1.0.2"

# --- System Information ---
sysinfo = "0.32"
crossbeam = "0.8.4"
# sketchy = "0.3.0"  # Package not available, removing for now

[features]
# Optional/benchmarking features (removed - criterion now only in dev-dependencies)
# bench = ["criterion"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.7.0"  # Moved from dependencies - only needed for tests
anyhow = "1.0.99"
thiserror = "2.0.14"
rand = "0.8"

[[bench]]
name = "assembly_benchmarks"
harness = false
